# tech-challenge-fiap

./: .gitignore  DEPLOYMENT.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  gerar_pdf.py  pyproject.toml  render.yaml  requirements.txt
docs/: deploy_architecture.md  model_card.md  monitoring_plan.md
models/: meta.pkl  model.pth  pipeline.pkl
notebooks/: Etapa_1.ipynb  Etapa_2.ipynb  Etapa_2.py  gen_etapa2.py  mlflow.db
notebooks/mlruns/1/models/m-ad5a0a2b0efb4ce59a28f70a0610eefa/artifacts/: MLmodel  conda.yaml  model.pkl
notebooks/mlruns/1/models/m-c4d2e66f6bf547d49ff5d4f41bc310aa/artifacts/: MLmodel  model.pkl
scripts/: gerar_guia_projeto.py  train_and_save.py  visualize_results.py
src/api/: __init__.py  logging_config.py  main.py  middleware.py  schemas.py
src/churn/: __init__.py  config.py  evaluate.py  model.py  pipeline.py  preprocessing.py  train.py
src/churn_baseline/: model.py
src/evaluation/: hypothesis_test.py
tests/: test_api.py  test_model.py  test_preprocessing.py  test_schema.py
