[project]
name = "tech-challenge-fiap-churn"
version = "0.3.0"
description = "Pipeline de ML End-to-End para previsão de Churn - FIAP Postech"
readme = "README.md"
requires-python = ">=3.11"

# Dependências do Projeto (Single Source of Truth)
dependencies = [
    # Data
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "openpyxl>=3.1.0",
    # ML / Modelagem
    "scikit-learn>=1.2.0",
    "torch>=2.0.0",
    # Visualizacao
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    # Tracking
    "mlflow>=2.3.0",
    # API (Etapa 3)
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    # Notebooks
    "ipykernel>=6.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "httpx>=0.24.0",
    "pandera>=0.17.0",
]

# Configuração de Testes (Pytest)
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-v --tb=short"

# Linting e Formatacao
[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.per-file-ignores]
"scripts/gerar_guia_projeto.py" = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]